fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -130,13 +130,13 @@ ul {
   transition: 0.3s;
   background-color: #202020;
   background-color: rgb(0,0,0,0.9);
+  overflow-y: auto;
 }
 
 .modal-content {
   color: #fff;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 10%;
 }
 
 .modal-close {
@@ -227,7 +227,6 @@ ul {
 
   .modal {
     height: 100vh;
-    overflow-y: auto;
   }
 
   .modal-content {
